Fix alignment in cards for good, add category info card on "indicatoare_de_avertizare"

--- a/scss/_style-index.scss
+++ b/scss/_style-index.scss
@@ -59,6 +59,11 @@
     }
 
     .features-wrapper {
+        
+        @media only screen and (min-width: vars.$media-query-size-biggest) {
+            max-width: 160rem;
+            align-self: center;
+        }
         display: flex;
         flex-direction: row;
         height: 50%;
