--- a/scss/_style-indicatoare.scss
+++ b/scss/_style-indicatoare.scss
@@ -18,7 +18,15 @@
 }
 
 .category-card {
+    box-sizing: border-box;
     flex: 0 0 30%;
+    @media only screen and (max-width: vars.$media-query-size-big) {
+        flex: 0 0 40%;
+    }
+    @media only screen and (max-width: vars.$media-query-size-small) {
+        flex: 0 0 100%;
+    }
+
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -35,8 +43,8 @@
     }
 
     img {
-        display: block;
-        max-width: 100%;
+        flex-grow: 0;
+        height: 16rem;
     }
 
     &__body {
@@ -58,5 +66,37 @@
 
     &__title {
         padding-bottom: 0;
+    }
+}
+
+.category-info {
+    // flex: 0 0 100%;
+
+    align-self: center;
+    width: 80%;
+    margin-bottom: vars.$padding-big;
+
+    border-radius: vars.$border-radius;
+    overflow: hidden;
+
+    background-color: color-themes.$secondary-color;
+    color: color-themes.$text-color--dark;
+
+    // width: 100%;
+    box-sizing: border-box;
+
+    &__row {
+        padding: vars.$padding-small;
+        border-bottom: 3px solid var(--background-color);
+        &:nth-last-child(1) {
+            border-bottom: unset;
+        }
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+
+        & > :nth-last-child(1) { // valori
+            text-align: right;
+        }
     }
 }
