--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -47,8 +47,15 @@
         text-align: center;
     }
 
-    @media only screen and (max-width: vars.$media-query-size-small) {
-        padding: vars.$padding-small;
-        padding-bottom: calc(vars.$padding-big + 2rem);
+    // @media only screen and (max-width: vars.$media-query-size-small) {
+    //     padding: vars.$padding-small;
+        // padding-bottom: calc(vars.$padding-big + 2rem);
+    // }
+
+    @media only screen and (min-width: vars.$media-query-size-biggest) {
+        max-width: 100rem;
     }
+
+    align-self:center;
+
 }
