--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -7,5 +7,6 @@ $font-display: "Inconsolata", monospace;
 $font: "Space Grotesk", sans-serif;
 $font-size: 1rem;
 $border-radius: 3px;
+$media-query-size-biggest: 2000px;
 $media-query-size-big: 820px;
 $media-query-size-small: 600px;
