--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,6 @@ body {
   font-size: vars.$font-size;
   margin: 0;
   padding: 0;
-  // min-height: 100vh;
   color: var(--text-color);
   background-color: var(--background-color);
 }
@@ -61,4 +60,7 @@ button {
   background-color: var(--background-color);
   // padding: vars.$padding-small * 1.5;
   padding-top: vars.$padding-big;
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
 }
